src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__hash_ones.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: "snap(&Hash([0xffu8; MERKLE_HASH_LEN]))"
---
0000: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
0010: ff ff ff ff ff ff ff ff
