src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__hash_sequential.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: snap(&Hash(bytes))
---
0000: 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f
0010: 10 11 12 13 14 15 16 17
