src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__hash_zeros.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: "snap(&Hash([0u8; MERKLE_HASH_LEN]))"
---
0000: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
0010: 00 00 00 00 00 00 00 00
