src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__message_closing_empty.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: snap(&m)
---
0000: 00 00 00 00 00 00 00 00
