src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__message_closing_populated.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: snap(&m)
---
0000: 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
0010: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
0020: 00 00 00 00 00 a6 01 00 00 00 ff ff ff ff ff ff
0030: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
0040: ff ff ff ff ff ff ff ff ff ff
