src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__message_complete_populated.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: snap(&m)
---
0000: 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
0010: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
0020: 00 00 00 00 00 41 77 41 f6
