src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__message_exchange_populated.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: snap(&m)
---
0000: 01 00 00 00 1e 1d 1c 1b 1a 19 18 17 16 15 14 13
0010: 12 11 10 0f 0e 0d 0c 0b 0a 09 08 07 06 05 04 03
0020: 02 01 00 00 01 01 ab 77 02 01 ab 77 01 00 00 00
0030: 01 00 00 00 cc 03 03 03 03 03 03 03 03 03 03 03
0040: 03 03 03 03 03 03 03 03 03 03 03 03 03
