src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__message_initiate_one_entry.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: "snap(&message::Initiate { uncertain })"
---
0000: 01 00 00 00 01 01 01 01 01 01 01 01 01 01 01 01
0010: 01 01 01 01 01 01 01 01 01 01 01 01
