src/tree/mirror/alternating/snapshots/rumors__tree__mirror__alternating__wire_snapshot__message_opening_empty.snap
---
source: src/tree/mirror/alternating/wire_snapshot.rs
expression: "snap(&message::Opening::default())"
---
0000: 00 00 00 00
